cbits/Bullet.h

void* btSoftBody_AJoint_new(); //constructor: AJoint  ( ::btSoftBody::AJoint::* )(  ) 
void btSoftBody_AJoint_free(void *c);
 
void btSoftBody_AJoint_Terminate(void *c,float p0); //method: Terminate void ( ::btSoftBody::AJoint::* )( ::btScalar ) 
//not supported method: Type ::btSoftBody::Joint::eType::_ ( ::btSoftBody::AJoint::* )(  ) const
// error:  - unsupported

void btSoftBody_AJoint_Solve(void *c,float p0,float p1); //method: Solve void ( ::btSoftBody::AJoint::* )( ::btScalar,::btScalar ) 
void btSoftBody_AJoint_Prepare(void *c,float p0,int p1); //method: Prepare void ( ::btSoftBody::AJoint::* )( ::btScalar,int ) 
// attribute not supported: //attribute: ::btVector3[2] btSoftBody_AJoint->m_axis
void btSoftBody_AJoint_m_icontrol_set(void *c,void* a); //attribute: ::btSoftBody::AJoint::IControl * btSoftBody_AJoint->m_icontrol
void* btSoftBody_AJoint_m_icontrol_get(void *c); //attribute: ::btSoftBody::AJoint::IControl * btSoftBody_AJoint->m_icontrol
void* btSoftBody_Anchor_new(); //constructor: Anchor  ( ::btSoftBody::Anchor::* )(  ) 
void btSoftBody_Anchor_free(void *c);
 
void btSoftBody_Anchor_m_node_set(void *c,void* a); //attribute: ::btSoftBody::Node * btSoftBody_Anchor->m_node
void* btSoftBody_Anchor_m_node_get(void *c); //attribute: ::btSoftBody::Node * btSoftBody_Anchor->m_node
void btSoftBody_Anchor_m_local_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Anchor->m_local
void btSoftBody_Anchor_m_local_get(void *c,float* a);
void btSoftBody_Anchor_m_body_set(void *c,void* a); //attribute: ::btRigidBody * btSoftBody_Anchor->m_body
void* btSoftBody_Anchor_m_body_get(void *c); //attribute: ::btRigidBody * btSoftBody_Anchor->m_body
void btSoftBody_Anchor_m_influence_set(void *c,float a); //attribute: ::btScalar btSoftBody_Anchor->m_influence
float btSoftBody_Anchor_m_influence_get(void *c); //attribute: ::btScalar btSoftBody_Anchor->m_influence
void btSoftBody_Anchor_m_c0_set(void *c,float* a); //attribute: ::btMatrix3x3 btSoftBody_Anchor->m_c0
void btSoftBody_Anchor_m_c0_get(void *c,float* a);
void btSoftBody_Anchor_m_c1_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Anchor->m_c1
void btSoftBody_Anchor_m_c1_get(void *c,float* a);
void btSoftBody_Anchor_m_c2_set(void *c,float a); //attribute: ::btScalar btSoftBody_Anchor->m_c2
float btSoftBody_Anchor_m_c2_get(void *c); //attribute: ::btScalar btSoftBody_Anchor->m_c2
void* btSoftBody_Body_new0(); //constructor: Body  ( ::btSoftBody::Body::* )(  ) 
void* btSoftBody_Body_new1(void* p0); //constructor: Body  ( ::btSoftBody::Body::* )( ::btSoftBody::Cluster * ) 
void* btSoftBody_Body_new2(void* p0); //constructor: Body  ( ::btSoftBody::Body::* )( ::btCollisionObject * ) 
void btSoftBody_Body_free(void *c);
 
void btSoftBody_Body_invWorldInertia(void *c,float* ret); //method: invWorldInertia ::btMatrix3x3 const & ( ::btSoftBody::Body::* )(  ) const
void btSoftBody_Body_activate(void *c); //method: activate void ( ::btSoftBody::Body::* )(  ) const
void btSoftBody_Body_linearVelocity(void *c,float* ret); //method: linearVelocity ::btVector3 ( ::btSoftBody::Body::* )(  ) const
void btSoftBody_Body_applyVImpulse(void *c,float* p0,float* p1); //method: applyVImpulse void ( ::btSoftBody::Body::* )( ::btVector3 const &,::btVector3 const & ) const
void btSoftBody_Body_applyDImpulse(void *c,float* p0,float* p1); //method: applyDImpulse void ( ::btSoftBody::Body::* )( ::btVector3 const &,::btVector3 const & ) const